--- a/mla.rmd
+++ b/mla.rmd
@@ -12,7 +12,7 @@ options(Encoding="UTF-8")
 
 # Overview
 As per the assignment background...
-Using devices such as Jawbone Up, Nike FuelBand, and Fitbit it is now possible to collect a large amount of data about personal activity relatively inexpensively. These type of devices are part of the quantified self movement – a group of enthusiasts who take measurements about themselves regularly to improve their health, to find patterns in their behavior, or because they are tech geeks. One thing that people regularly do is quantify how much of a particular activity they do, but they rarely quantify how well they do it. In this project, your goal will be to use data from accelerometers on the belt, forearm, arm, and dumbell of 6 participants. They were asked to perform barbell lifts correctly and incorrectly in 5 different ways. 
+Using devices such as Jawbone Up, Nike FuelBand, and Fitbit it is now possible to collect a large amount of data about personal activity relatively inexpensively. These type of devices are part of the quantified self movement  a group of enthusiasts who take measurements about themselves regularly to improve their health, to find patterns in their behavior, or because they are tech geeks. One thing that people regularly do is quantify how much of a particular activity they do, but they rarely quantify how well they do it. In this project, your goal will be to use data from accelerometers on the belt, forearm, arm, and dumbell of 6 participants. They were asked to perform barbell lifts correctly and incorrectly in 5 different ways. 
 
 # Source
 Full Documentation and data citation
@@ -25,7 +25,8 @@ https://d396qusza40orc.cloudfront.net/predmachlearn/pml-training.csv
 The test data sourced from:
 https://d396qusza40orc.cloudfront.net/predmachlearn/pml-testing.csv
 
-# Cleanup and preparation
+# Load, Cleanup and preparation of the data from the .csv files
+Removing all columns/variables with NA and drop the first 7 column that are not required for modeling and prediction 
 ```{R Clean}
 library(caret)
 set.seed(5432)
@@ -46,12 +47,12 @@ I repeated the training with 3, 5 and 7 folds, found 3 to be a satifactory value
 Note: I saved the model to make it easy to reporoduce the analysis without the wait time. Simply uncomment the 4 lines prior to run if you wish to fully redo the model training.
 
 ```{r Training}
-#rf.model <- train(classe ~.,method="rf",
-#              data=train, 
-#              trControl = trainControl(method="cv"),number=3)
+rf.model <- train(classe ~.,method="rf",
+              data=train, 
+              trControl = trainControl(method="cv"),number=3)
 
 #saveRDS(rf.model, "./model.rds")
-rf.model<-readRDS("model.rds")
+#rf.model<-readRDS("model.rds")
 rf.model
 ```
 The accuracy of 99% is highly acceptable.
@@ -65,7 +66,7 @@ confusionMatrix(valid$classe, rf.predict)
 As can be seen the accuracy, sensitivy and specificity are all very accepatble values on the validation data
 
 
-# Run the model on the 20 Test Cases in 'test_df'
+# Using the model on the 20 Test Cases in 'test_df'
 ```{r Test}
 
 predicts<-predict(rf.model, test_df)
